--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,10 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn job_recommender.wsgi:application
+    startCommand: gunicorn backend.job_recommender.wsgi:application
     envVars:
   - key: DJANGO_SETTINGS_MODULE
-    value: job_recommender.settings
+    value: backend.job_recommender.settings
   - key: SECRET_KEY
     value: 'django-insecure-2+=k2w)cea-!437@fzp(_0j18kdm=^^3&-u*acma7+ha%qe9dp'
   - key: DEBUG
