--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn backend.wsgi:application
+    startCommand: python manage.py runserver
     envVars:
   - key: DJANGO_SETTINGS_MODULE
     value: backend.settings
