start Command changed , cd backend

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: python manage.py runserver
+    startCommand: cd backend && python manage.py runserver 0.0.0.0:$PORT
     envVars:
   - key: DJANGO_SETTINGS_MODULE
     value: backend.settings
