--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: HachYoJobs.com
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: cd backend && pip install -r requirements.txt
     startCommand: cd backend && python manage.py runserver 0.0.0.0:$PORT
     envVars:
   - key: DJANGO_SETTINGS_MODULE
